ConsoleUtilityItself.java